--- a/Gratify/Gratify.vcxproj.filters
+++ b/Gratify/Gratify.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Gratify">
+      <UniqueIdentifier>{BB3F2F6E-271F-AE09-3037-39E09C95146B}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Gratify\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Gratify.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Gratify.h" />
     <ClInclude Include="src\Gratify\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Gratify</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Gratify\Core.h">
+      <Filter>Gratify</Filter>
     </ClInclude>
     <ClInclude Include="src\Gratify\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Gratify</Filter>
     </ClInclude>
     <ClInclude Include="src\Gratify\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Gratify</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Gratify\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Gratify</Filter>
     </ClCompile>
     <ClCompile Include="src\Gratify\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Gratify</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
