--- a/Gratify/Gratify.vcxproj.filters
+++ b/Gratify/Gratify.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\Gratify\Log.h">
       <Filter>Gratify</Filter>
     </ClInclude>
+    <ClInclude Include="src\gfpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Gratify\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\Gratify\Log.cpp">
       <Filter>Gratify</Filter>
     </ClCompile>
+    <ClCompile Include="src\gfpch.cpp" />
   </ItemGroup>
 </Project>
